<resources>
    <string name="app_name">cosplan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Slogan_Cosplan">Stop procrastinating and go craft!</string>
    <string name="menu_calender">Convention calender</string>
    <string name="menu_webshop">Webshops</string>
    <string name="menu_settings">Settings</string>
    
    <string name="WebsiteName">Name</string>
    <string name="WebsiteLink">Website</string>
    <string name="AddWebshopToDb">Add webshop</string>
    <string name="ToastSuccessNewWebshop">Webshop successfully added</string>
    <string name="FillOutFields">Please fill out all necessary fields: </string>
    <string name="FillOutAllFields">Please fill out all fields.</string>
    <string name="UpdateDb">Update</string>
    <string name="DeleteDataFromDatabase">Delete</string>
    <string name="Label_Belgium">Belgium</string>
    <string name="Label_Netherland">Netherland</string>
    <string name="btn_add_cosplay">Add cosplay</string>
    <string name="btnChooseCosplayImg">Choose a picture</string>
    <string name="txtBudget">Budget</string>
    <string name="txtEndDate">End date</string>
    <string name="txtStartDate">Start date</string>
    <string name="editTextHintName">Name</string>
    
    <string name="txtName">Name</string>
    <string name="txtTitle">New Cosplay</string>
    <string name="btnCancel">Cancel</string>
    <string name="txt_chooseImg_intent">Choose an image</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_compact_mode">Compact mode</string>
    <string name="txt_cancelDeleteCosplay">No</string>
    <string name="txt_deleteCosplay">Yes</string>
    <string name="ConformationDeleteCosplay">Are you sure you want to delete</string>
    <string name="btnText_cosplay_parts">Parts</string>
    <string name="btnText_notes">Notes</string>
    <string name="btnText_reference_pictures">Ref. pictures</string>
    <string name="btnText_wip_pictures">WIP pictures</string>
    <string name="btnText_checklist">Checklist</string>
    <string name="btnText_shopping_list">shopping list</string>
    <string name="btnText_webshops">Webshops</string>
    <string name="btnText_events">Events</string>
    <string name="title_newCosplayPart">New Part</string>
    <string name="ConformationDeleteCheckListPart">Do you want to delete </string>
    <string name="btnText_WIPShort">WIP img</string>
    <string name="tnTxt_RefImgShort">Ref. Img.</string>
    <string name="ContentDescription_NewCosplayImgPreview">Preview of the chosen image</string>
    <string name="NewPart_NameHint">Name</string>
    <string name="NewPart_LinkHint">Link</string>
    <string name="NewPart_CostHint">Cost</string>
    <string name="NewPart_EndDateHint">End date</string>
    <string name="NewPart_ImageViewContentDescription">Preview of the chosen image</string>
    <string name="NewPart_ChooseImage">Choose a picture</string>
    <string name="NewPart_AddPart">Add part</string>
    <string name="NewPart_CancelPart">Cancel</string>
    <string name="Checklist_NameTitle">ChecklistPart name</string>
    <string name="NewChecklistPartTitle">Add part to the checklist</string>
    <string name="NewChecklistPartName">Part name</string>
    <string name="NewChecklistPartAdd">Add part</string>
    <string name="NewChecklistPartCancel">Cancel</string>
    <string name="txtPercentage">Percentage</string>
    <string name="CosplayHeader_ContentDescription">Img of the cosplay</string>
    <string name="CosplayHeader_ImageButtonContentDescription">Update cosplay</string>
    <string name="Cosplay_ImageContentDescription">Cosplay image</string>
    <string name="CheckList_ClearCheckBox">Clear all checkboxes</string>
    <string name="CosplayNotesSave">Save Note</string>
    <string name="CosplayParts_BuyTitle">To buy</string>
    <string name="CosplayParts_MakeTitle">To Make</string>
    <string name="RefImgAdd">Add reference image</string>
    <string name="ShoppingListAdd">add shoppinglist part</string>
    <string name="ShoppingListClear">Clear shoppinglist</string>
    <string name="WipImageGet">Get picture</string>
    <string name="WipImageTake">Take Picture</string>
    <string name="ShoppingListShop">Shop</string>
    <string name="Shoppinglist_AddTitle">Add part to the shoppinglist</string>
    <string name="NewCosplayWebsiteTitle">Add webshop to the cosplay</string>
    <string name="ConventionPlace">Place</string>
    <string name="ConventionDate">Date</string>
    <string name="PartStatus">status</string>
    <string name="Convention">Convention</string>
    <string name="Shoot">Photoshoot</string>
    <string name="Charity">Charity</string>
    <string name="AddEvent">Add event</string>
    <string name="EventTitle">New event</string>
    <string name="TitleUpdatePart">Update part</string>
    <string name="ImageFullScreenClose">close</string>
    <string name="imageDelete"> Delete</string>
    <string name="CheckListExportToPdf">Export To PDF</string>
    <string name="EventUpdate">Update Event</string>
    <string name="UpdateWebshop">Update webshop</string>
    <string name="DeleteImage">Do you want to delete this image</string>
    <string name="UpdateCosplay">Update cosplay</string>
    <string name="WholeList">\" the whole list?\"</string>
    <string name="NoteSaved">The note is saved</string>
    <string name="ComingSoon">Coming soon</string>
    <string name="ShoppingLIstDeleted">Shopping list deleted</string>
    <string-array name="BuyMake">
        <item>Buy</item>
        <item>Make</item>
    </string-array>
    <string-array name="Status">
        <item>Planned</item>
        <item>Designed</item>
        <item>Material ordered</item>
        <item>Material received</item>
        <item>Assembled</item>
        <item>Primed</item>
        <item>Painted</item>
        <item>Test Fit</item>
        <item>Finished</item>
    </string-array>
    <string-array name="EventType">
        <item>Convention</item>
        <item>Photoshoot</item>
        <item>Charity</item>
    </string-array>
</resources>
