<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/Spinner_NewPartBuyMake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/EditText_NewPartLink"
        app:layout_constraintEnd_toEndOf="@+id/EditText_NewPartName"
        app:layout_constraintStart_toStartOf="@+id/EditText_NewPartName"
        app:layout_constraintTop_toBottomOf="@+id/EditText_NewPartName" />

    <TextView
        android:id="@+id/TextView_NewPartTitle"
        style="@style/Titles"
        android:text="@string/title_newCosplayPart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditText_NewPartName"
        style="@style/EditTextInputForm"
        android:layout_marginBottom="8dp"
        android:hint="@string/NewPart_NameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Spinner_NewPartBuyMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_NewPartTitle" />

    <EditText
        android:id="@+id/EditText_NewPartLink"
        style="@style/EditTextInputForm"
        android:hint="@string/NewPart_LinkHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/EditText_NewPartCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Spinner_NewPartBuyMake" />

    <EditText
        android:id="@+id/EditText_NewPartCost"
        style="@style/EditTextInputForm"
        android:hint="@string/NewPart_CostHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/EditText_NewPartEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_NewPartLink" />

    <EditText
        android:id="@+id/EditText_NewPartEndDate"
        style="@style/EditTextInputForm"
        android:hint="@string/NewPart_EndDateHint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/Btn_NewPartChoosePartImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_NewPartCost" />

    <ImageView
        android:id="@+id/ImageView_NewPartImgPreview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/NewPart_ImageViewContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/Btn_NewPartAdd"
        app:layout_constraintEnd_toEndOf="@+id/Btn_NewPartChoosePartImg"
        app:layout_constraintStart_toStartOf="@+id/Btn_NewPartChoosePartImg"
        app:layout_constraintTop_toBottomOf="@+id/Btn_NewPartChoosePartImg"
        app:srcCompat="@drawable/cosplanv2" />

    <Button
        android:id="@+id/Btn_NewPartChoosePartImg"
        style="@style/ButtonFullWidth"
        android:layout_width="wrap_content"
        android:text="@string/NewPart_ChooseImage"
        app:layout_constraintBottom_toTopOf="@+id/ImageView_NewPartImgPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_NewPartEndDate" />

    <Button
        android:id="@+id/Btn_NewPartAdd"
        style="@style/DialogButtonRight"
        android:text="@string/NewPart_AddPart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Btn_NewPartCancel"
        app:layout_constraintTop_toTopOf="@+id/Btn_NewPartCancel" />

    <Button
        android:id="@+id/Btn_NewPartCancel"
        style="@style/DialogButtonLeft"
        android:text="@string/NewPart_CancelPart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_NewPartAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView_NewPartImgPreview" />
</androidx.constraintlayout.widget.ConstraintLayout>