<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_PartSmallName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtName"
        app:layout_constraintEnd_toStartOf="@+id/textView_PartSmallStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_PartSmallStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/PartStatus"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_PartSmallName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_PartSmallCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/NewPart_CostHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_PartSmallName"
        app:layout_constraintTop_toBottomOf="@+id/textView_PartSmallName" />

    <TextView
        android:id="@+id/textView_PartSmallEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEndDate"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_PartSmallCost"
        app:layout_constraintStart_toStartOf="@+id/textView_PartSmallStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>